Fix button text overflowing

--- a/wp-content/themes/nok-2025-v1/assets/css/components/_nok-square-block.scss
+++ b/wp-content/themes/nok-2025-v1/assets/css/components/_nok-square-block.scss
@@ -159,6 +159,9 @@ nok-square-block {
         object-fit: cover;
         object-position: 50% 50%;
       }
+      @include components-base.media-breakpoint-down(components-base.$mobile-breakpoint) {
+        display: none;
+      }
     }
 
   }
